test: expand cross-loader coverage